--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <h1>✨ Style Your Buttons ✨</h1>
     <p>Apply custom styles to your button in the Style.css file</p>
-    <button class="custom-btn btn-1">Click Here</button>
+    <button class="custom-btn btn-1">Tap Here</button>
     <button class="custom-btn btn-2">Click Here</button>
-    <button class="custom-btn btn-3">Click Here</button>
+    <button class="custom-btn btn-3">Press Here</button>
 </body>
 </html>
